--- a/algos_myscale.yaml
+++ b/algos_myscale.yaml
@@ -3,8 +3,8 @@ float:
 
     pinecone:
       docker-tag: ann-benchmarks-redisearch
-      module: ann_benchmarks.algorithms.pinecone
-      constructor: PineCone
+      module: ann_benchmarks.algorithms.myscale
+      constructor: MyScale
       base-args: ["@metric"]
       run-groups:
         redisearch:
