--- a/algos_zilliz.yaml
+++ b/algos_zilliz.yaml
@@ -1,5 +1,5 @@
 float:
-  any:
+  euclidean:
   
     zilliz:
       docker-tag: ann-benchmarks-zilliz
@@ -10,16 +10,3 @@ float:
         redisearch:
           arg-groups: [[0]]
           query-args: [[1, 2, 3]]
-
-    
-  angular:
-    vearch:
-      docker-tag: ann-benchmarks-vearch
-      module: ann_benchmarks.algorithms.vearch
-      constructor: VearchIndex
-      base-args: ["@metric"]
-      run-groups:
-        vearch1:
-          args: [[2048], [0.2], [1, 2]]
-          query-args: [[1, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 25, 28, 31, 34, 37, 40, 45, 50, 55, 60, 65, 75, 90, 115, 130, 150, 170, 200, 230, 250, 300, 400, 500, 800], [3, 5, 10]]
-
